kustomize/base/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: example-webapp
  labels:
    app: web
spec:
  containers:
    - name: example-webapp
      image: ghcr.io/valancej/compliance-workflow:latest
      ports:
        - containerPort: 8080
