kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example-webapp
  name: example-webapp
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: example-webapp
  type: ClusterIP
